Wed Dec 17 02:30:14 GMT 2014  Olly Betts <olly@survex.com>

	* api/error.cc,backends/chert/chert_btreebase.cc,
	  backends/chert/chert_table.cc,backends/flint_lock.cc,
	  backends/glass/glass_table.cc,common/,configure.ac,
	  net/remoteconnection.cc: Add errno_to_string() function which is
	  thread-safe where a suitable alternative to strerror() exists.

Tue Dec 16 06:54:32 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Add missing m4 quoting.  Generated configure file is
	  unchanged.

Tue Dec 16 06:28:21 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Don't check for strerror - it's specified by C89, and
	  we weren't using the result of the check anyway.

Tue Dec 16 03:59:39 UTC 2014  Sébastien Debrard <sebastien.debrard@gmail.com>

	* api/omenquire.cc,backends/multi/multi_postlist.cc,
	  tests/api_anydb.cc,tests/api_db.cc: Prefer ++x to x++.

Tue Dec 16 03:50:41 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Define MINGW_HAS_SECURE_API under mingw to get
	  _putenv_s() declared in stdlib.h.

Sun Dec 14 09:42:01 GMT 2014  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,include/xapian/database.h: Make overloaded forms of
	  Database::allterms_begin() and Database::allterms_end() use default
	  parameters instead.

Sat Dec 13 02:48:10 GMT 2014  Olly Betts <olly@survex.com>

	* api/error.cc,generate-exceptions,net/remoteconnection.h: On
	  Windows, avoid defining EADDRINUSE, etc if they're already defined,
	  and use WSAE* constants un-negated, as they start from a high value
	  so won't collide with E* constants.

Fri Dec 12 03:41:02 GMT 2014  Olly Betts <olly@survex.com>

	* backends/glass/glass_freelist.cc: Avoid infinite recursion when we
	  hit the end of the freelist block we're reading and the end of the
	  block we're writing at the same time.

Thu Dec 11 20:45:28 GMT 2014  Olly Betts <olly@survex.com>

	* backends/glass/glass_version.cc: Use str() rather than sprintf().
